--- a/libs/shared/styles/styles.scss
+++ b/libs/shared/styles/styles.scss
@@ -80,5 +80,388 @@ body{
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
+//custom tabs styles
+.tabs-container {
+    margin: 0.5rem;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.tabs-container ul {
+    justify-content: center;
+    border-bottom: none;
+}
+
+.tabs-container .tab {
+    padding: 1.25em;
+    text-align: center;
+    cursor: pointer;
+
+}
+
+.tabs-container .tab:hover {
+    border-radius: 2px;
+    opacity: 90%;
+}
+
+.tabs-container .tab.active {
+    color: #fff;
+    background-color: #3c203c;
+}
+
+.pane {
+    padding: 0 1px;
+}
+
+//ohms calculator styles
+
+.standard-value-section {
+    margin-top: 2rem;
+    h2 {
+        font-size: 18px;
+    }
+}
+
+.ng-option-label {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.color-box {
+    display: inline-block !important;
+    height: 1rem !important;
+    width: 1rem !important;
+    margin-left: 10px;
+}
+
+.standard-resistors-selector {
+    display: flex;
+    margin: 1rem;
+}
+
+.standard-resistors-selector div {
+    margin: 0 0.5rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.standard-resistors-selector label {
+    margin-bottom: 10px;
+}
+
+.resistor {
+    font-size: 2em;
+}
+
+.resistor > * {
+    display: inline-block;
+    background-color: hsl(37, 40%, 83%);
+    height: 3em;
+    width: 2em;
+}
+.resistor .left, .resistor .right {
+    border-radius: 10px;
+}
+
+.resistor .center{
+    position: relative;
+    height: 2.2em;
+    width: 6.4em;
+    margin-bottom: 0.4em;
+}
+
+.center > * {
+    display: inline-block;
+    margin-left: 0.2em;
+    margin-right: 0.2em;
+}
+
+.resistor .band{
+    position: relative;
+    z-index: 1000;
+    height: 2.2em;
+    width: 1.2em;
+    margin-bottom: 0.4em;
+}
+
+.resistor-board {
+     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;;
+}
+
+.custom-resistor-build {
+    margin-top: 2rem;
+    h2 {
+        font-size: 18px;
+    }
+}
+
+.ohms-calculator-workboard {
+    margin-top: 2rem;
+    text-align: center;
+    padding-top: 1rem;
+}
+
+.note{
+    font-weight: 500;
+}
+
+.form-ohms {
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form-group{
+    margin-bottom: 1rem;
+    font-weight: 500;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    width: 30vw;
+}
+
+.form-label {
+    margin-right: 0.5rem;
+    margin-bottom: 0;
+    margin-top: 0.5rem;
+    width: 40%;
+}
+
+.form-control {
+    display: flex;
+    border: 1px solid lightgray;
+    border-radius: 0.10rem;
+    align-items: center;
+    padding: 0.25rem 0rem  0.25rem 0.5rem!important;
+}
+
+.form-control > input{
+    width: 100%;
+    height: 94%;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  appearance: textfield;
+  -moz-appearance: textfield;
+  outline: none;
+  border: none;
+}
+
+.form-control input {
+    &:focus {
+        outline: 1px solid #3c203c;
+    }
+}
+
+.custom-number-controls {
+    background-color: #3c203c;
+    color: #ebcaeb;
+    box-sizing: border-box;
+    height: inherit;
+    border-top-right-radius: 0.1rem;
+    border-bottom-right-radius: 0.1rem;
+}
+
+.custom-number-controls > span:hover {
+    cursor: pointer;
+}
+
+//extra large size screens
+@media (min-width:1200px) {
+    .ohms-calculator-wrapper {
+        display: flex;
+        flex-direction: row;
+    }
+    .standard-value-section {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center
+    }
+    .custom-resistor-build {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+    .resistor-board {
+        padding: 2rem;
+        margin-top: 1rem;
+    }
+    .form-control {
+        height: 6.5vh;
+    }
+    .ohms-calculator-workboard {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
+    .ohms-calculator-workboard .note {
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+        padding: 0.5rem;
+    }
+}
+
+//large size screens
+@media (min-width:1025px) {
+    .ohms-calculator-wrapper {
+        display: flex;
+        flex-direction: row;
+    }
+    .standard-value-section {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center
+    }
+    .custom-resistor-build {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+    .resistor-board {
+        padding: 2rem;
+        margin-top: 1rem;
+    }
+    .form-control {
+        height: 6.5vh;
+    }
+    .ohms-calculator-workboard {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
+    .ohms-calculator-workboard .note {
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+        padding: 0.5rem;
+    }
+}
+
+//medium screen sizes
+
+@media (max-width:1024px) {
+    .ohms-calculator-wrapper {
+        display: flex;
+        flex-direction: column;
+    }
+    .standard-value-section {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center
+    }
+    .custom-resistor-build {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+    .resistor-board {
+        padding: 2rem;
+        margin-top: 1rem;
+    }
+    .form-control {
+        height: 3.5vh;
+    }
+    .ohms-calculator-workboard {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
+    .ohms-calculator-workboard .note {
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+        padding: 0.5rem;
+    }
+}
+
+//smaller screen sizes
+
+@media (max-width:768px) {
+    .ohms-calculator-wrapper {
+        display: flex;
+        flex-direction: column;
+    }
+    .standard-value-section {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center
+    }
+    .custom-resistor-build {
+        display: flex;
+        justify-content: space-around;
+        flex-direction: column;
+        align-items: center
+    }
+    .resistor-board {
+        padding: 1rem;
+        margin-top: 1rem;
+    }
+    .form-control {
+        height: 4.5vh;
+    }
+    .form-group {
+        width: inherit;
+    }
+}
+
+.custom-first-ring, .custom-second-ring, .custom-third-ring {
+    display: flex;
+    margin: 0.5rem 0;
+}
+
+.custom-resistor-options {
+    input[type="radio"] {
+        display: none;
+        &:checked + label {
+            span {
+                transform: scale(1.25);
+                border: 2px solid darkblue;
+            }
+        }
+    }
+
+    label {
+        display: inline-block;
+        width: 25px;
+        height: 40px;
+        margin-right: 5px;
+        cursor: pointer;
+        &:hover {
+          span { 
+            transform: scale(1.25); 
+          }
+        }
+    }
+
+    span {
+        display: block;
+        width: 100%;
+        height: 100%;
+        transition: transform .2s ease-in-out;
+    }
+}
+
+
+
 //animation import
 @import url('animate.scss');
