responsive css changes

--- a/apps/k-t/src/assets/styles/common-styles.scss
+++ b/apps/k-t/src/assets/styles/common-styles.scss
@@ -1,6 +1,7 @@
 $secondary-button-color:#ebcaeb;
 $background-color:#f6ebf6;
 $primary-color:#3c203c;
+$crimson: crimson;
 $white:#fff;
 $black:#000;
 $black-secondary:#111;
