--- a/libs/core/src/lib/components/overview/overview.component.html
+++ b/libs/core/src/lib/components/overview/overview.component.html
@@ -1,5 +1,11 @@
-<div class="overview-container">
-   <div class="overview-card-group card-group m-3 col-12">
+<div class="overview-container mt-5">
+    <div class="overview-title col-11">
+        <h1>Kitsune Tools: Empowering STEM with Precision</h1>
+        <h6>A versatile suite of tools crafted to simplify Science, Technology, <br/>
+         Engineering, and Math operations for sharper results
+        </h6>
+    </div>
+   <div class="overview-card-group card-group m-3 col-11">
     <div class="card" *ngFor="let app of availableApps">
         <img class="card-img-top" height="250px" [src]="'assets/images/'+app.img" alt="Title"/>
         <div class="card-body">
