--- a/libs/ohms-calculator/src/lib/ohms-calculator.component.html
+++ b/libs/ohms-calculator/src/lib/ohms-calculator.component.html
@@ -86,8 +86,8 @@
             </lib-tab>
             <lib-tab tabTitle="Find a color code for Resistance value">
                 <div class="known-resistor-build">
-                    <div class="known-resistor-options">
-                       <div class="">
+                    <div class="known-resistor-options col-12">
+                       <div class="col-6">
                         <label for="resistance" class="form-label"> Resistance </label>
                         <div class="custom-form-group" [formGroup]="knownResistorForm">
                             <input type="number" class="form-control" placeholder="Enter known resistance value" formControlName="resistance">
