--- a/libs/core/src/lib/components/core.componenet.html
+++ b/libs/core/src/lib/components/core.componenet.html
@@ -1,2 +1,10 @@
-<lib-sidebar></lib-sidebar>
-<router-outlet></router-outlet>
+<div class="core-wrapper">
+    <div class="header-container">
+        <lib-sidebar></lib-sidebar>
+        <lib-header></lib-header>
+    </div>
+    <div class="main-wrapper">
+        <router-outlet></router-outlet>
+    </div>
+    <lib-footer></lib-footer>
+</div>
