--- a/libs/shared/styles/styles.scss
+++ b/libs/shared/styles/styles.scss
@@ -1,13 +1,74 @@
 @import '../../../apps/k-t/src/assets/styles/common-styles.scss';
 
+:host {
+    display: block;
+    max-width: 100vw;
+    overflow-x: hidden;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
 body{
     height: 100%;
+    width: 100%;
     background-color:$background-color;
 }
 
 .body-container{
     height: 98vh;
 }
+
+//header css
+
+.header-container {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.main-wrapper {
+    min-height: 89vh;
+}
+
+//footer css
+
+.core-wrapper {
+    width: 100%;
+}
+
+.footer-container{
+    padding: 0.5rem 1rem;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: $primary-color;
+    color: $white;
+}
+
+.footer-container ul{
+    display: flex;
+    padding: 0;
+    flex-direction: row;
+    list-style: none;
+    margin: 1rem 0;
+}
+
+.footer-container ul li {
+    padding: 0 0.5rem;
+}
+
+.footer-container ul li a, .copyright-info a {
+    text-decoration: none;
+    color:$white;
+    font-weight: 550;
+    &:hover{
+        color: $secondary-button-color;
+    }
+}
+
 
 // maintenance component
 .maintenance-header {
@@ -54,6 +115,20 @@ body{
     cursor: pointer;
 }
 
+.overview-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.overview-title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
 .overview-card-group {
     justify-content: center !important;
 }
@@ -73,24 +148,6 @@ body{
     border-top-right-radius: 8px !important;
 }
 
-@media (max-width:576px) {
-
-    .known-resistor-build {
-        margin: 1rem !important;
-    }
-
-    .maintenance-content {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-    }
-}
-
-@media (min-width:1200px) {
-    .maintenance-image {
-        display: flex;
-    }
-}
 
 //page-not-found styles
 
@@ -234,7 +291,7 @@ body{
     background-color: $white;
     border-radius: 14px;
     height: 100%;
-    padding-top: 1.75rem;
+    padding: 1.75rem;
 }
 
 .note{
@@ -296,6 +353,9 @@ input::-webkit-inner-spin-button {
 
 .known-resistor-options {
     margin-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .known-resistor-options > div > .form-label {
@@ -304,7 +364,6 @@ input::-webkit-inner-spin-button {
 }
 
 .known-resistor-options .custom-form-group {
-    width: 25rem;
     display: flex;
     gap: 1%;
     flex-direction: row;
@@ -355,168 +414,13 @@ input[type=number] {
     cursor: pointer;
 }
 
-//extra large size screens
-@media (min-width:1200px) {
-    .ohms-calculator-wrapper {
-        display: flex;
-        flex-direction: row;
-    }
-    .standard-value-section {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center
-    }
-    .custom-resistor-build {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center;
-    }
-    .resistor-board {
-        padding: 2rem;
-        margin-top: 1rem;
-    }
-    .form-control {
-        height: 6.5vh;
-    }
-    .ohms-calculator-workboard {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: center;
-    }
-    .ohms-calculator-workboard .note {
-        display: flex;
-        flex-direction: column;
-        text-align: left;
-        padding: 0.5rem;
-    }
-    .tolerance-selector > h2 {
-        font-size: 18px;
-    }
-}
-
-//large size screens
-@media (max-width:1199px) {
-    .ohms-calculator-wrapper {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .standard-value-section {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center
-    }
-    .custom-resistor-build {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center;
-    }
-    .resistor-board {
-        padding: 2rem;
-        margin-top: 1rem;
-    }
-    .form-control {
-        height: 6.5vh;
-    }
-    .ohms-calculator-workboard {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: center;
-        margin: 0.5rem 0.25rem 1.5rem 0.25rem;
-    }
-    .ohms-calculator-workboard .note {
-        display: flex;
-        flex-direction: column;
-        text-align: left;
-        padding: 0.5rem;
-    }
-}
-
-//medium screen sizes
-
-@media (max-width:1024px) {
-    .ohms-calculator-wrapper {
-        display: flex;
-        flex-direction: column;
-    }
-    .standard-value-section {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center
-    }
-    .custom-resistor-build {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center;
-    }
-    .resistor-board {
-        padding: 2rem;
-        margin-top: 1rem;
-    }
-    .form-control {
-        height: 3.5vh;
-    }
-    .ohms-calculator-workboard {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: center;
-        margin-bottom: 1rem;
-        padding: 1rem;
-    }
-    .ohms-calculator-workboard .note {
-        display: flex;
-        flex-direction: column;
-        text-align: left;
-        padding: 0.5rem;
-    }
-}
-
-//smaller screen sizes
-
-@media (max-width:768px) {
-    .ohms-calculator-wrapper {
-        display: flex;
-        flex-direction: column;
-    }
-    .standard-value-section {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center
-    }
-    .custom-resistor-build {
-        display: flex;
-        justify-content: space-around;
-        flex-direction: column;
-        align-items: center
-    }
-    .resistor-board {
-        padding: 1rem;
-        margin-top: 1rem;
-    }
-    .form-control {
-        height: 4.5vh;
-    }
-    .form-group {
-        width: inherit;
-    }
-    .tabs-container {
-        padding: 1rem 0.25rem;
-    }
-}
-
 .custom-first-ring, .custom-second-ring, .custom-third-ring {
     display: flex;
     margin: 0.5rem 0;
+}
+
+.color-label > span {
+    border: 1.5px solid $crimson;
 }
 
 .custom-resistor-options {
@@ -555,7 +459,7 @@ input[type=number] {
     height: 100%;
     width: 250px;
     position: fixed;
-    top: 0;
+    top: 2rem;
     left: 0;
     background-color: $primary-color;
     overflow-x: hidden;
@@ -599,16 +503,17 @@ input[type=number] {
   }
   
   .open-btn {
-    font-size: 24px;
+    font-size: 18px;
     cursor: pointer;
     background-color: $primary-color;
     color: white;
-    padding: 10px 20px;
+    padding: 5px 10px;
     border: none;
   }
   
   .main-content {
     margin-left: 185px;
+    margin-top: 2.75rem;
     padding: 0px;
     transition: margin-left 0.3s;
     position: fixed;
@@ -626,4 +531,5 @@ input[type=number] {
   }
   
 //animation import
-@import url('animate.scss');
+@import './animate.scss';
+@import './responsive.scss';
