added new simulation simple pendulum

--- a/libs/core/src/lib/components/sidebar/sidebar.component.html
+++ b/libs/core/src/lib/components/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <div id="sidebar" class="sidebar" [ngClass]="isSideBarHidden ? 'hidden' : ''">
     <ul>
-      <li><a href="/overview"><i class="bi bi-house sidebar-item-icon"></i>Overview</a></li>
+      <li><a href="overview"><i class="bi bi-house sidebar-item-icon"></i>Overview</a></li>
     </ul>
 </div>
 
