--- a/libs/shared/styles/responsive.scss
+++ b/libs/shared/styles/responsive.scss
@@ -237,6 +237,13 @@
     .tabs-container {
         padding: 1rem 0.25rem;
     }
+    .planet-container {
+        gap: 0.5rem;
+        justify-content: center;
+    }
+    .below {
+        margin-bottom: 1rem;
+    }
 }
 
 //for tablet views
