--- a/libs/shared/styles/styles.scss
+++ b/libs/shared/styles/styles.scss
@@ -1,5 +1,151 @@
 @import '../../../apps/k-t/src/assets/styles/common-styles.scss';
 
+//pendulum animation
+.planet-selector {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.planet-label {
+    font-size: 24px !important;
+    font-weight: 600 !important;
+    text-align: center;
+}
+
+.pendulum-analysis {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.pendulum-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.pendulum-fields {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.custom-control {
+    display: flex;
+    flex-direction: column
+}
+
+.planet-container {
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+}
+
+input[type="range"] {
+    -webkit-appearance: none;
+    appearance: none; 
+    width: 100%;
+    cursor: pointer;
+    outline: none;
+    overflow: hidden;
+    border-radius: 14px;
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+    height: 15px;
+    background: #ccc;
+    border-radius: 16px;
+}
+
+input[type="range"]::-moz-range-track {
+    height: 15px;
+    background: #ccc;
+    border-radius: 16px;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none; 
+    height: 15px;
+    width: 15px;
+    background-color: #fff;
+    border-radius: 50%;
+    border: 2px solid $primary-color;
+    box-shadow: -407px 0 0 400px $primary-color;
+}
+
+input[type="range"]::-moz-range-thumb {
+    height: 15px;
+    width: 15px;
+    background-color: #fff;
+    border-radius: 50%;
+    border: 1px solid $primary-color;
+    box-shadow: -407px 0 0 400px $primary-color;
+}
+
+.planet-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    text-align: center;
+    cursor: pointer;
+    transition: 0.3s;
+    min-width: 120px;
+}
+
+.planet-container {
+    padding-top: 1rem;
+}
+
+.planet-card input[type="radio"] {
+    display: none;
+}  
+
+.planet-card input[type="radio"]:checked + .content {
+    font-weight: bold;
+    color: $white;
+}
+
+.planet-card .content {
+    width: 100%;
+    padding: 0.5rem;
+    text-align: center;
+}
+
+.planet-card.selected {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+
+.planet-card::after {
+    content: "";
+    display: block;
+    width: 50px;
+    height: 40px;
+    margin: 0 0 -16px -68px;
+    border-top-right-radius: 50px
+}
+
+.planet-card:nth-child(odd)::after {
+    background-color: #fff;
+}
+
+.planet-card:nth-child(even)::after {
+    background-color: #ccc;
+}
+
+.range-value {
+    padding: 0.5rem 0.25rem;
+    border: 1px dotted #ccc;
+    color: $primary-color;
+    font-weight: 500;
+}
+
 :host {
     display: block;
     max-width: 100vw;
@@ -134,13 +280,19 @@ body{
 }
 
 .overview-card-group > .card {
-    margin: 0.5rem 1rem !important;
+    margin: 0.5rem 0.5rem !important;
     width: 18rem !important;
     border-top-left-radius: 8px !important;
     border-top-right-radius: 8px !important;
     border-bottom-left-radius: 8px !important;
     border-bottom-right-radius: 8px !important;
-    flex: 0 1 calc(20% - 8px)
+    flex: 0 1 calc(20% - 8px);
+    transition: box-shadow 0.5s ease-out;
+}
+
+.overview-card-group > .card:hover{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    cursor: pointer;
 }
 
 .card-img-top {
@@ -148,6 +300,21 @@ body{
     border-top-right-radius: 8px !important;
 }
 
+.card-body {
+    text-align: justify;
+}
+
+.btn-primary, .btn-primary:hover, .btn-primary:active {
+    background-color: $primary-color;
+    border-color: $primary-color;
+    font-weight: 600;
+}
+
+.btn-primary:hover, .btn-primary:active {
+    background-color: $white !important;
+    color: $primary-color !important;
+    border-color: $primary-color !important;
+}
 
 //page-not-found styles
 
@@ -322,6 +489,9 @@ body{
     margin-right: 0.5rem;
     margin-bottom: 0;
     margin-top: 0.5rem;
+    text-wrap: nowrap;
+    font-size: 18px;
+    font-weight: 600;
     width: 40%;
 }
 
@@ -530,6 +700,7 @@ input[type=number] {
     margin-left: 0;
   }
   
+
 //animation import
 @import './animate.scss';
 @import './responsive.scss';
