minor changes added title

--- a/libs/pendulum-sim/src/lib/pendulum-sim.component.html
+++ b/libs/pendulum-sim/src/lib/pendulum-sim.component.html
@@ -1,3 +1,9 @@
+<div class="ohms-calculator-header text-center my-2">
+    <h1 class="m-0 p-t-1">Simple Pendulum</h1>
+    <h6 class="m-0 p-b-1">Let's find out how simple pendulum moves in different planet.
+         Along with damping and string length changes
+    </h6>
+</div>
 <div class="p-4 row col-12 pendulum-analysis">
     <div #canvas class="col-lg-5 col-xl-5 col-md-6 col-sm-12 col-xs-12 mb-md-4" id="p5canvas"></div>
     <lib-line-graph class="col-lg-6 col-xl-6 col-md-6 col-sm-12 col-xs-12"></lib-line-graph>
